package com.hts.test.account;
import com.hts.generated.grpc.*;
import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import java.util.UUID;
import java.util.function.Supplier;

public final class ReserveTest {
    private static final String HOST = "localhost";//"192.168.10.1";
    private static final int PORT = 8081;

    public static void main(String[] args) {
        System.out.println("ğŸš€ ë‹¨ì¼ ì‹œë‚˜ë¦¬ì˜¤ í…ŒìŠ¤íŠ¸ ì‹œì‘: Reserve ê¸°ëŠ¥ ì˜ˆì™¸ ê²€ì¦");
        ManagedChannel channel = ManagedChannelBuilder.forAddress(HOST, PORT)
                .usePlaintext().build();
        // ClientWorker ëŒ€ì‹  Blocking Stubì„ ì§ì ‘ ì‚¬ìš©
        var stub = AccountServiceGrpc.newBlockingStub(channel);

        // í…ŒìŠ¤íŠ¸ë¥¼ ìœ„í•œ ê³ ìœ  Request ID ìƒì„±
        String duplicateRequestId = UUID.randomUUID().toString();

        // [FR-01 ì˜ˆì™¸] ì˜ˆìˆ˜ê¸ˆ ë¶€ì¡±: ì£¼ë¬¸ê°€ëŠ¥ê¸ˆì•¡ < (ìˆ˜ëŸ‰ x ê°€ê²©)
        testReserveScenario("ğŸ’° FR-01: ì˜ˆìˆ˜ê¸ˆ ë¶€ì¡±",
                () -> stub.reserve(buildReserveRequest(1000L, "99999999.00", UUID.randomUUID().toString())),
                ResultCode.INSUFFICIENT_FUNDS);

        // [FR-01 ì˜ˆì™¸] ìœ íš¨í•˜ì§€ ì•Šì€ ìš”ì²­: ê¸ˆì•¡ <= 0
        testReserveScenario("ğŸ§® FR-01: ìŒìˆ˜ ê¸ˆì•¡ ìš”ì²­",
                () -> stub.reserve(buildReserveRequest(1000L, "-10.00", UUID.randomUUID().toString())),
                ResultCode.INVALID_REQUEST);

        // [FR-00 ì˜ˆì™¸] ì¡´ì¬í•˜ì§€ ì•ŠëŠ” ê³„ì¢Œ: ê³„ì¢Œ ë“±ë¡ ìƒíƒœ ì•„ë‹˜
        testReserveScenario("âŒ FR-00: ì¡´ì¬í•˜ì§€ ì•ŠëŠ” ê³„ì¢Œ",
                () -> stub.reserve(buildReserveRequest(999999L, "100.00", UUID.randomUUID().toString())),
                ResultCode.ACCOUNT_NOT_FOUND);

        // [ìš”ì²­ ê²€ì¦] ì¤‘ë³µ RequestId (ë©±ë“±ì„± ë³´ì¥ ê²€ì¦)
        // 1. ì²« ë²ˆì§¸ ìš”ì²­ (ì„±ê³µ ê°€ì •)
        try {
            stub.reserve(buildReserveRequest(1000L, "10.00", duplicateRequestId));
            System.out.println("\n--- ì¤‘ë³µ RequestId (1ì°¨ ì„±ê³µ) ---");
        } catch (Exception ignored) {}

        // 2. ë‘ ë²ˆì§¸ ìš”ì²­ (DUPLICATE_REQUEST ì‘ë‹µ ê¸°ëŒ€)
        testReserveScenario("ğŸ” ì¤‘ë³µ RequestId (2ì°¨ ì‹œë„)",
                () -> stub.reserve(buildReserveRequest(1000L, "10.00", duplicateRequestId)),
                ResultCode.DUPLICATE_REQUEST);


        channel.shutdown();
        System.out.println("\nğŸ‰ ë‹¨ì¼ ì‹œë‚˜ë¦¬ì˜¤ í…ŒìŠ¤íŠ¸ ì™„ë£Œ");
    }

    private static ReserveRequest buildReserveRequest(Long accountId, String amount, String requestId) {
        return ReserveRequest.newBuilder()
                .setAccountId(accountId)
                .setAmount(amount)
                .setRequestId(requestId)
                .build();
    }

    private static void testReserveScenario(String name, Supplier<ReserveReply> rpcCall, ResultCode expected) {
        System.out.printf("\n--- %s ---\n", name);
        long start = System.currentTimeMillis();
        try {
            ReserveReply reply = rpcCall.get();
            long end = System.currentTimeMillis();
            boolean passed = reply.getCode() == expected;
            String status = passed ? "âœ… PASS" : "âŒ FAIL";

            System.out.printf("  ìƒíƒœ: %s\n", status);
            System.out.printf("  ì‘ë‹µ ì½”ë“œ: %s (ì˜ˆìƒ: %s)\n", reply.getCode(), expected);
            System.out.printf("  ì†Œìš” ì‹œê°„: %d ms\n", (end - start));

        } catch (Exception e) {
            long end = System.currentTimeMillis();
            // gRPCì—ì„œ ì„œë²„ì˜ ì˜ˆì™¸ê°€ ì•„ë‹Œ ì—°ê²°/í†µì‹  ì˜¤ë¥˜ ë°œìƒ ì‹œ
            System.out.printf("  ìƒíƒœ: âŒ UNEXPECTED RPC EXCEPTION\n");
            System.out.printf("  ì˜ˆì™¸: %s\n", e.getClass().getSimpleName());
            System.out.printf("  ì†Œìš” ì‹œê°„: %d ms\n", (end - start));
        }
    }
}