package com.hts.test.account;

import com.hts.generated.grpc.ResultCode;

import java.math.BigDecimal;
import java.util.*;
import java.util.concurrent.*;
import java.util.function.Consumer;

/**
 * ë‹¤ì–‘í•œ reserve/unreserve í…ŒìŠ¤íŠ¸ ì¼€ì´ìŠ¤ë¥¼ ìë™ ì‹¤í–‰í•˜ê³ 
 * ê²°ê³¼ë¥¼ MetricsCollectorë¡œ ì „ë‹¬.
 */
public final class ScenarioRunner {

    private final TestMetrics metrics;
    private final ClientPool grpcClient;
    private final int threadCount;
    private final ExecutorService pool;

    public ScenarioRunner(TestMetrics metrics, ClientPool grpcClient, int threadCount) {
        this.metrics = metrics;
        this.grpcClient = grpcClient;
        this.threadCount = threadCount;
        this.pool = Executors.newFixedThreadPool(threadCount);
    }

    public void runAll() throws InterruptedException {
        runScenario("âœ… Normal Reserve", this::testNormalReserve);
        runScenario("ğŸ’° Insufficient Funds", this::testInsufficientFunds);
        runScenario("ğŸ§® Negative Amount", this::testNegativeAmount);
        runScenario("ğŸ” Duplicate RequestId", this::testDuplicateRequest);
        runScenario("âŒ Invalid AccountId", this::testInvalidAccount);
        runScenario("ğŸ§© Consistency & Mixed Scenarios", this::testConsistencyCheck);
    }

    private void runScenario(String name, Runnable testMethod) throws InterruptedException {
        System.out.printf("\n=== Scenario: %s ===\n", name);
        long start = System.nanoTime();
        testMethod.run();
        long end = System.nanoTime();
        metrics.report(name, (end - start) / 1_000_000);
        Thread.sleep(500);
    }

    /** ì •ìƒ ì˜ˆìˆ˜ê¸ˆ ì˜ˆì•½ */
    private void testNormalReserve() {
        runConcurrent(1000, i -> {
            grpcClient.reserve(1000L + i, BigDecimal.valueOf(100), UUID.randomUUID().toString());
            grpcClient.unreserve(1000L + i, BigDecimal.valueOf(100), UUID.randomUUID().toString());
        });
    }

    /** ì˜ˆìˆ˜ê¸ˆ ë¶€ì¡± */
    private void testInsufficientFunds() {
        runConcurrent(1000, i -> {
            grpcClient.reserve(2000L + i, BigDecimal.valueOf(99999999), UUID.randomUUID().toString());
        });
    }

    /** ìŒìˆ˜ ê¸ˆì•¡ */
    private void testNegativeAmount() {
        runConcurrent(1000, i -> {
            grpcClient.reserve(3000L + i, BigDecimal.valueOf(-100), UUID.randomUUID().toString());
        });
    }

    /** ì¤‘ë³µ requestId */
    private void testDuplicateRequest() {
        String rid = UUID.randomUUID().toString();
        runConcurrent(1000, i -> {
            grpcClient.reserve(4000L + i, BigDecimal.valueOf(50), rid);
        });
    }

    /** ì¡´ì¬í•˜ì§€ ì•ŠëŠ” ê³„ì¢Œ */
    private void testInvalidAccount() {
        runConcurrent(1000, i -> {
            grpcClient.reserve(999999L + i, BigDecimal.valueOf(100), UUID.randomUUID().toString());
        });
    }

    private void testConsistencyCheck() {
        int userCount = 1000;
        CountDownLatch latch = new CountDownLatch(userCount);

        for (int i = 0; i < userCount; i++) {
            Long accountId = 1000L + i;
            pool.submit(() -> {
                long start = System.nanoTime();
                String ridBase = UUID.randomUUID().toString();

                try {
                    ResultCode r1 = grpcClient.reserve(accountId, BigDecimal.valueOf(1000), ridBase + "-R1").getCode();
                    ResultCode u1 = grpcClient.unreserve(accountId, BigDecimal.valueOf(500), ridBase + "-U1").getCode();
                    ResultCode u2 = grpcClient.unreserve(accountId, BigDecimal.valueOf(1000), ridBase + "-U2").getCode();

                    long elapsed = System.nanoTime() - start;

                    if (r1 == ResultCode.SUCCESS && u1 == ResultCode.SUCCESS && u2 == ResultCode.INSUFFICIENT_FUNDS) {
                        metrics.recordSuccess(elapsed);
                        metrics.recordSuccess(elapsed);
                        metrics.recordSuccess(elapsed);
                    } else {
                        String errorMsg = String.format(
                            "accountId=%d | R1=%s U1=%s U2=%s | Expected: R1=SUCCESS U1=SUCCESS U2=INSUFFICIENT_FUNDS",
                            accountId, r1, u1, u2
                        );
                        metrics.recordFailure(elapsed, new RuntimeException(errorMsg));

                        if (r1 != ResultCode.SUCCESS) {
                            metrics.recordFailure(0, new RuntimeException("R1 failed: " + r1));
                        }
                        if (u1 != ResultCode.SUCCESS) {
                            metrics.recordFailure(0, new RuntimeException("U1 failed: " + u1));
                        }
                    }
                } catch (Exception e) {
                    metrics.recordFailure(System.nanoTime() - start, e);
                } finally {
                    latch.countDown();
                }
            });
        }
        try { latch.await(); } catch (InterruptedException ignored) {}
    }

    private void runConcurrent(int count, Consumer<Integer> task) {
        CountDownLatch latch = new CountDownLatch(count);
        for (int i = 0; i < count; i++) {
            final int idx = i;
            pool.submit(() -> {
                long start = System.nanoTime();
                try {
                    task.accept(idx);
                    metrics.recordSuccess(System.nanoTime() - start);
                } catch (Exception e) {
                    metrics.recordFailure(System.nanoTime() - start, e);
                } finally {
                    latch.countDown();
                }
            });
        }
        try { latch.await(); } catch (InterruptedException ignored) {}
    }

    /** QAS-P3: ì˜ˆìˆ˜ê¸ˆ ì˜ˆì•½/í•´ì œ êµì°¨ í…ŒìŠ¤íŠ¸ */
    public void testReserveUnreserveCross(int concurrentUsers) {
        // ëª©í‘œ: 1000ëª… ë™ì‹œ ì ‘ì† ìƒíƒœì—ì„œ Reserve/Unreserveë¥¼ êµì°¨í•˜ë©° ì‹¤í–‰
        runConcurrent(concurrentUsers * 10, i -> { // ê° ì‚¬ìš©ìë‹¹ 10íšŒì”© ìš”ì²­
            // accountIdëŠ” 100000Lë¶€í„° ì‹œì‘í•˜ë„ë¡ PerformanceLoadTestì—ì„œ ì„¤ì • ê°€ì •
            Long accountId = 100000L + (i % concurrentUsers);
            BigDecimal amount = BigDecimal.valueOf(100);

            // Reserve í›„ Unreserveë¥¼ ë°”ë¡œ ì‹¤í–‰í•˜ì—¬ ìì› ìƒíƒœ ë³€í™”ë¥¼ ìœ ë°œ
            String reserveId = UUID.randomUUID().toString();
            grpcClient.reserve(accountId, amount, reserveId);

            String unreserveId = UUID.randomUUID().toString();
            grpcClient.unreserve(accountId, amount, unreserveId);

        });
    }


    /** ìŠ¤ë ˆë“œ í’€ì„ ì¢…ë£Œí•˜ê³  ëª¨ë“  ì‘ì—…ì´ ì™„ë£Œë˜ê¸°ë¥¼ ê¸°ë‹¤ë¦½ë‹ˆë‹¤. */
    public void shutdown() {
        pool.shutdown();
        try {
            // ìµœëŒ€ 60ì´ˆ ë™ì•ˆ ì¢…ë£Œë¥¼ ê¸°ë‹¤ë¦½ë‹ˆë‹¤.
            if (!pool.awaitTermination(5, TimeUnit.SECONDS)) {
                System.err.println("TestScenarios pool did not terminate in time. Forcing shutdown.");
                pool.shutdownNow();
            }
        } catch (InterruptedException e) {
            Thread.currentThread().interrupt();
            pool.shutdownNow();
        }
    }
}
